# cloud-hypervisor

./: Cargo.toml
src/: main.rs
vm-config/: Cargo.toml
vm-config/src/: lib.rs
vmm/: Cargo.toml  build.rs
vmm/src/: config.rs  cpu.rs  device_manager.rs  lib.rs  memory_manager.rs  migration.rs  serial_manager.rs  vm.rs
vmm/src/api/: http_endpoint.rs  mod.rs
