[package]
name = "vm-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.145"
serde_json = "1.0.85"
thiserror = "1.0.37"
net_util = { path = "../net_util" }
devices = { path = "../devices" }
virtio-devices = { path = "../virtio-devices" }
